tests/paczka1/small_fuzzy/97302161.err
Error in line 6: Y9I9QCa S994 22,7
Error in line 9: Y9I9QCa A538 19,6
Error in line 11: Y9I9QCa S715 17,8
Error in line 12: Y9I9QCa S994 75,1
